# python-debbugs-graphene

./: README.md  pyproject.toml
src/debbugs_graphene/: types.py
src/debbugs_graphene/client/method/: get_bug_log.py  get_bugs.py  get_newest_bugs.py  get_status.py
src/debbugs_graphene/graphene/: model.py  schema.py
