[tool.poetry]
name = "debbugs-graphene"
version = "0.1.0"
description = ""
authors = ["yamashita-optarc <yamashita@optarc.net>"]

[tool.poetry.dependencies]
python = "^3.11"
graphene-pydantic = { path = "./.vendor/graphene-pydantic" }
Jinja2 = "^3.1.2"
requests = "^2.28.2"

[tool.poetry.scripts]
debbugs-graphene = "debbugs_graphene.cli:cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
